--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -36,10 +36,14 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  margin-top: 33px; }
+  margin-top: 33px;
+  justify-content: space-between; }
+  @media (min-width: 1024px) {
+    .icons_cont {
+      justify-content: flex-start; } }
   .icons_cont .insta_logo {
     width: 38px;
-    margin-left: 40px;
+    margin-left: 26px;
     transition: all 0.5s ease; }
     .icons_cont .insta_logo:hover {
       filter: saturate(1.3); }
@@ -54,7 +58,7 @@ h2 {
     border-radius: 3px;
     background-color: #00c300;
     border-radius: 10px;
-    width: 199px;
+    width: 189px;
     transition: all 0.2s ease; }
     .icons_cont .line_btn .line_logo {
       height: 40px;
