--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -42,9 +42,13 @@ h2{
 	flex-direction: row;
   align-items: baseline;
 	margin-top: 33px;
+  justify-content: space-between;
+	@media (min-width: 1024px) {
+		justify-content: flex-start;
+	}
 	.insta_logo{
 		width: 38px;
-		margin-left: 40px;
+		margin-left: 26px;
 		transition: all 0.5s ease;
 		&:hover{
 			filter:saturate(1.3);
@@ -61,7 +65,7 @@ h2{
 		border-radius: 3px;
 		background-color:#00c300;
 		border-radius: 10px;
-    width: 199px;
+    width: 189px;
 		.line_logo{
 			height: 40px;
 			margin-left: 10px;
