--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -20,6 +20,10 @@ h2 {
   h2 .japaneseTitle {
     font-size: 17px; }
 
+.is-gray {
+  background-color: #f5f4f4;
+  padding: 10px; }
+
 .comment_txt {
   font-weight: 300;
   display: block;
@@ -43,7 +47,7 @@ h2 {
       justify-content: flex-start; } }
   .icons_cont .insta_logo {
     width: 38px;
-    margin-left: 26px;
+    margin-left: 43px;
     transition: all 0.5s ease; }
     .icons_cont .insta_logo:hover {
       filter: saturate(1.3); }
@@ -58,7 +62,7 @@ h2 {
     border-radius: 3px;
     background-color: #00c300;
     border-radius: 10px;
-    width: 189px;
+    width: 249px;
     transition: all 0.2s ease; }
     .icons_cont .line_btn .line_logo {
       height: 40px;
@@ -289,6 +293,8 @@ h2 {
     .l-frame #access .address_cont .middle_font {
       font-size: 15px;
       margin: 0; }
+      .l-frame #access .address_cont .middle_font.is-gray {
+        background-color: gray; }
     .l-frame #access .address_cont .address {
       margin-left: 30px;
       width: 80%;
@@ -302,9 +308,9 @@ h2 {
           font-weight: 300;
           margin-right: 80px; } }
     .l-frame #access .address_cont .subway_logo {
-      width: 26px;
-      padding-top: 12px;
-      margin-right: 20px; }
+      margin-right: 20px;
+      width: 23px;
+      padding-top: 7px; }
       .l-frame #access .address_cont .subway_logo img {
         width: 100%; }
     .l-frame #access .address_cont .map {
