--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -24,6 +24,11 @@ h2{
 	}
 }
 
+.is-gray{
+	background-color: #f5f4f4;
+	padding: 10px;
+}
+
 .comment_txt{
 	font-weight: 300;
 	display: block;
@@ -48,7 +53,7 @@ h2{
 	}
 	.insta_logo{
 		width: 38px;
-		margin-left: 26px;
+		margin-left: 43px;
 		transition: all 0.5s ease;
 		&:hover{
 			filter:saturate(1.3);
@@ -65,7 +70,7 @@ h2{
 		border-radius: 3px;
 		background-color:#00c300;
 		border-radius: 10px;
-    width: 189px;
+    width: 249px;
 		.line_logo{
 			height: 40px;
 			margin-left: 10px;
@@ -371,6 +376,9 @@ h2{
 			.middle_font{
 				font-size: 15px;
 				margin: 0;
+				&.is-gray{
+					background-color: gray;
+				}
 			}
 			.address{
 				margin-left: 30px;
@@ -387,11 +395,9 @@ h2{
 			}
 
 			.subway_logo{
-				width: 26px;
-				padding-top: 12px;
 				margin-right: 20px;
-				@media (min-width: 1024px) {
-				}
+				width: 23px;
+				padding-top: 7px;
 				img{
 					width: 100%;
 				}
